# hems-core

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: api.rs  main.rs
src/api/: demkit.rs  ha.rs
src/api/demkit/: battery.rs  devices.rs  env.rs  ha_entity.rs  meter.rs  solar.rs  thermal.rs  timeshifters.rs
src/api/ha/: entity.rs
src/resources/: house.rs
src/resources/devices/: battery.rs  devices.rs  ha_entity.rs  meter.rs  solar.rs  thermal.rs  timeshifters.rs
