[package]
name = "hems-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
num-complex = { version = "0.4.6", features = ["serde"] }
once_cell = "1.20.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
thiserror = "2.0.11"
